fixed dark mode colours

--- a/public/css/blogs.css
+++ b/public/css/blogs.css
@@ -39,7 +39,7 @@
 }
 
 .dark-mode #mainPage #slide {
-    background-color: #B8CFE680;
+    background-color: #383c4c;
     color: #ddd;
 }
 
